projects/compiler/test/typechecker/match/error_alreadycovered_None.out
Error at %FILE_NAME%:5:3
Unreachable match case
  |    None => {}
       ^
This case has already been covered by a previous case
